--- a/templates/login.html
+++ b/templates/login.html
@@ -11,13 +11,13 @@
                 <form>
                     <div class="mb-3">
                         <label for="exampleFormControlInput0" class="form-label">Login</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput0"
-                               placeholder="Your nickname">
+                        <input type="text" maxlength="25" class="form-control" id="exampleFormControlInput0"
+                               placeholder="Your nickname" required>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">Password</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1"
-                               placeholder="******">
+                        <input type="password" maxlength="25" class="form-control" id="exampleFormControlInput1"
+                               placeholder="******" required>
                     </div>
                     <div class="ContainerWhite" style="margin-top:30px;">
                         <button type="submit" class="btn btn-primary">Log in!</button>
