--- a/templates/question.html
+++ b/templates/question.html
@@ -48,8 +48,8 @@
                      style="padding-top:30px; margin-top:30px; width: 852px;">
                     <form>
                         <div class="mb-3">
-                            <textarea class="form-control" id="exampleFormControlTextarea2" rows="6"
-                                      placeholder="Enter your answer here..."></textarea>
+                            <textarea class="form-control" maxlength="200"  id="exampleFormControlTextarea2" rows="6"
+                                      placeholder="Enter your answer here..." required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Answer!</button>
                     </form>
