--- a/templates/register.html
+++ b/templates/register.html
@@ -11,28 +11,28 @@
                 <form>
                     <div class="mb-3">
                         <label for="exampleFormControlInput0" class="form-label">Login</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput0"
-                               placeholder="Username">
+                        <input type="text" maxlength="25" class="form-control" id="exampleFormControlInput0"
+                               placeholder="Username" required>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">Email</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1"
-                               placeholder="*@*.*">
+                        <input type="email" maxlength="100" class="form-control" id="exampleFormControlInput1"
+                               placeholder="*@*.*" required>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlInput2" class="form-label">Nickname</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput2"
-                               placeholder="Nickname">
+                        <input type="text" maxlength="25" class="form-control" id="exampleFormControlInput2"
+                               placeholder="Nickname" required>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlInput3" class="form-label">Password</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput3"
-                               placeholder="******">
+                        <input type="password" maxlength="25" class="form-control" id="exampleFormControlInput3"
+                               placeholder="******" required>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlInput4" class="form-label">Repeat password</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput4"
-                               placeholder="******">
+                        <input type="password" maxlength="25" class="form-control" id="exampleFormControlInput4"
+                               placeholder="******" required>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlInput5" class="form-label">Upload Avatar</label>
