add new html pages

--- a/templates/hotq.html
+++ b/templates/hotq.html
@@ -5,8 +5,8 @@
 <main class="flex-shrink-0">
     <div class="container_q">
         <div class="ContainerWhite" style="margin-left: 20px; margin-top:20px;">
-            <h1>New questions</h1>
-            <h3 style="margin-left:50px; margin-top: 10px;"><a href = "{% url 'hotq' %}">Hot questions</a></h3>
+            <h1>Hot questions</h1>
+            <h3 style="margin-left:50px; margin-top: 10px;"><a href = "{% url 'index' %}">New questions</a></h3>
         </div>
         <div class="row" style="margin-left: 4px">
             <div class="col-8">
