--- a/templates/inc/authorized.html
+++ b/templates/inc/authorized.html
@@ -8,7 +8,7 @@
     <div class="col-10" style="padding-left:30px;">
         <h5 style="color:white">Admin</h5>
         <div class="ContainerBlack" style="color:white">
-            <div class="HeaderTextSmall">Settings</div>
+            <div class="HeaderTextSmall"><a href = "{% url 'settings' %}">Settings</a></div>
             <div class="HeaderTextSmall">Log out</div>
         </div>
     </div>
