--- a/templates/inc/base.html
+++ b/templates/inc/base.html
@@ -61,11 +61,11 @@
                 <div class="container_t" style="margin-bottom:20px;">
                     <h1>Popular tags</h1>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Tag0</li>
-                        <li class="list-group-item">Tag1</li>
-                        <li class="list-group-item">Tag2</li>
-                        <li class="list-group-item">Tag3</li>
-                        <li class="list-group-item">Tag4</li>
+                        <li class="list-group-item"><a  href="{% url 'tag' tag_id='Tag0' %}">Tag0</a></li>
+                        <li class="list-group-item"><a  href="{% url 'tag' tag_id='Tag1' %}">Tag1</a></li>
+                        <li class="list-group-item"><a  href="{% url 'tag' tag_id='Tag2' %}">Tag2</a></li>
+                        <li class="list-group-item"><a  href="{% url 'tag' tag_id='Tag3' %}">Tag3</a></li>
+                        <li class="list-group-item"><a  href="{% url 'tag' tag_id='Tag4' %}">Tag4</a></li>
                     </ul>
                 </div>
                 <div class="container_t" style="margin-bottom:20px;">
