--- a/templates/tag.html
+++ b/templates/tag.html
@@ -5,7 +5,7 @@
 <main class="flex-shrink-0">
     <div class="container_q">
         <div class="ContainerWhite" style="margin-left: 20px; margin-top:20px;">
-            <h1>Tag: {{ tag }}</h1>
+            <h1>Tag: {{ t_id }}</h1>
         </div>
         <div class="row" style="margin-left: 4px">
             <div class="col-8">
