--- a/templates/inc/answer_item.html
+++ b/templates/inc/answer_item.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-2">
             <div class="avatar_100">
-                <img src="{% static answer.img %}" alt=""/>
+                <img src="{% static answer.user.avatar %}" alt=""/>
             </div>
         </div>
         <div class="col-10">
