--- a/templates/inc/authorized.html
+++ b/templates/inc/authorized.html
@@ -2,14 +2,14 @@
 <div class="row">
     <div class="col-2">
         <div class="avatar_50">
-            <img src="{% static "img/avatar-1.jpg" %}" alt=""/>
+            <img src="../{{ auth_user.profile.avatar }}" alt=""/>
         </div>
     </div>
     <div class="col-10" style="padding-left:30px;">
-        <h5 style="color:white">Admin</h5>
+        <h5 style="color:white">{{ auth_user.profile.user.username }}</h5>
         <div class="ContainerBlack" style="color:white">
             <div class="HeaderTextSmall"><a href = "{% url 'settings' %}">Settings</a></div>
-            <div class="HeaderTextSmall">Log out</div>
+            <div class="HeaderTextSmall"><a href = "{% url 'logout' %}">Logout</a></div>
         </div>
     </div>
 </div>
