--- a/templates/inc/question_item.html
+++ b/templates/inc/question_item.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-2">
             <div class="avatar_100">
-                <img src="{% static question.user.avatar %}" alt=""/>
+                <img src="../{{ question.user.avatar }}" alt=""/>
             </div>
         </div>
         <div class="col-10">
