--- a/templates/question.html
+++ b/templates/question.html
@@ -10,7 +10,7 @@
                     <div class="row">
                         <div class="col-2" style="padding: 0px;">
                             <div class="avatar_150">
-                                <img src="{% static question.user.avatar %}" alt=""/>
+                                <img src="../{{ question.user.avatar }}" alt=""/>
                             </div>
                         </div>
                         <div class="col-10">
