add register and redirect

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 {% extends "inc/base.html" %}
 {% load static %}
+{% load bootstrap5 %}
 {% block content %}
 <!-- Begin page content -->
 <main class="flex-shrink-0">
@@ -7,41 +8,10 @@
         <div class="row" style="margin-left:60px;">
             <div class="col-8" style=" margin-top:30px;">
                 <h1>Registration</h1>
-                <h5 style="color:red; margin-top:20px; margin-bottom: 20px">Some mistakes!</h5>
-                <form>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput0" class="form-label">Login</label>
-                        <input type="text" maxlength="25" class="form-control" id="exampleFormControlInput0"
-                               placeholder="Username" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email</label>
-                        <input type="email" maxlength="100" class="form-control" id="exampleFormControlInput1"
-                               placeholder="*@*.*" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput2" class="form-label">Nickname</label>
-                        <input type="text" maxlength="25" class="form-control" id="exampleFormControlInput2"
-                               placeholder="Nickname" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput3" class="form-label">Password</label>
-                        <input type="password" maxlength="25" class="form-control" id="exampleFormControlInput3"
-                               placeholder="******" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput4" class="form-label">Repeat password</label>
-                        <input type="password" maxlength="25" class="form-control" id="exampleFormControlInput4"
-                               placeholder="******" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput5" class="form-label">Upload Avatar</label>
-                        <input type="file" class="form-control" id="exampleFormControlInput5"
-                               placeholder="c:\avatar.jpg">
-                    </div>
-                    <div class="ContainerWhite">
-                        <button type="submit" class="btn btn-primary">Register!</button>
-                    </div>
+                <form novalidate action="/register" method="post">
+                    {% csrf_token %}
+                    {% bootstrap_form  form %}
+                    <button type="submit" class="btn btn-primary">Register!</button>
                 </form>
             </div>
 {% endblock %}
